@@ -40,7 +40,9 @@ void EventTest::attached(SetOfStreams& streams)
   printf("EventTest connected to platform 0x%x\n", _event->header().platform());
   
   Stream* frmk = streams.stream(StreamParams::FrameWork);
-  if (_event->header().level()==Level::Recorder) {
+
+  //  Send event summaries to ControlLevel
+  {
     //    frmk->outlet()->sink(TransitionId::L1Accept);
     frmk->outlet()->sink(TransitionId::Unknown);
 
