@@ -1,3 +1,4 @@
+2009-Oct-28 weaver  Tag V01-05-00.  Removed Recorder level.
 2009-Oct-27 tomytsai  Add command line options for bldServerTest and bldClientTest to support the multicast address/port/interface options.
 2009-Oct-20 weaver  Tag V01-04-02.  Bug fix to config/ControlScan for live editing of scan
       configurations, and it now reads last used configuration.
